@@ -9,6 +9,7 @@
 - Add icon-name fallback to the show desktop plugin (bug #5117).
 - Disconnect the icon theme changed signal from a launcher when it
   is destroyed to avoid crash when the icon theme changes.
+- Fix drawing dots mode of the seperator plugin in a vertical panel (bug #5162).
 
 
 4.6.0
